objects/Asset_Hold__c.object
<CustomObject>
    <fields>
        <fullName>PT_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Holds</relationshipLabel>
        <relationshipName>Asset_Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PT_Hold_Comments__c</fullName>
        <label>Hold Comments</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Hold__c</fullName>
        <label>Hold</label>
        <referenceTo>PT_Hold__c</referenceTo>
        <relationshipLabel>Asset Holds</relationshipLabel>
        <relationshipName>Asset_Holds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Asset Hold</label>
    <nameField>
        <displayFormat>AH-{000000000}</displayFormat>
        <label>Asset Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>